# yacuri

./: .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
kernel/: Cargo.toml  init.sh
kernel/bootimage/: Cargo.toml
kernel/bootimage/src/: main.rs
kernel/install_fs/system/yacuri/: gui.yacari
kernel/install_fs/test_app/: main.yacari
kernel/src/: interrupts.rs  lib.rs  main.rs  memory.rs  vga_buffer.rs
kernel/src/allocator/: fixed_size_block.rs  memory.rs  mod.rs
kernel/src/drivers/: keyboard.rs  mod.rs  serial.rs  vga_buffer.rs
kernel/src/drivers/disk/: ata_pio.rs  fat.rs  mod.rs
kernel/src/drivers/interrupts/: gdt.rs  interrupts.rs  mod.rs
kernel/src/drivers/vga/: mod.rs
kernel/src/graphics/: mod.rs
kernel/src/scheduling/: executor.rs  mod.rs  task.rs  waker.rs
kernel/src/shell/: command.rs  mod.rs
kernel/src/vm/: memory.rs  mod.rs
kernel/tests/: heap_allocation.rs  stack_overflow.rs
lang/: Cargo.toml  design.md
lang/asm/: Cargo.toml  README.md
lang/asm/src/: lib.rs  x64.rs
lang/src/: error.rs  filesystem.rs  lexer.rs  lib.rs  smol_str.rs
lang/src/asm/: mod.rs
lang/src/compiler/: expr_compiler.rs  mod.rs  resolver.rs
lang/src/compiler/ir/: mod.rs
lang/src/compiler/module/: expr_compiler.rs  mod.rs  resolver.rs
lang/src/compiler/module/passes/: mod.rs
lang/src/compiler/passes/: mod.rs
lang/src/ir/: mod.rs
lang/src/parser/: ast.rs  mod.rs
lang/src/vm/: mod.rs  typesys.rs
lang/src/vm/function/: exprs.rs  mod.rs
lang/tests/: basic.rs  basic_funcs.yacari
lang/tests/basic_modules/: hello.yacari  world.yacari
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
src/allocator/: linked_list.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
