[package]
name = "yacuri"
version = "0.1.0"
authors = ["Ellie Ang. <git@angm.xyz>"]
edition = "2018"


[dependencies]
yacuri_lang = { path = "../lang", default-features = false }

bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
spin = "0.5.2"
volatile = "0.2.6"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
lazy_static = { version = "1.0", features = ["spin_no_std"]}
linked_list_allocator = "0.9.0"

[dependencies.fatfs]
git = "https://github.com/rafalh/rust-fatfs"
rev = "d0ed1b776bc24b3ef5e76b0335c90d2bd4d6d2b1"
features = ["unicode", "lfn", "alloc"]
default-features = false

[[test]]
name = "should_panic"
harness = false
[[test]]
name = "stack_overflow"
harness = false


[package.metadata.bootimage]
run-args = [
    "-drive", "format=raw,file=fs.bin"
]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
