[package]
name = "yacuri"
version = "0.1.0"
authors = ["Ellie Ang. <git@angm.xyz>"]
edition = "2018"


[dependencies]
# PROGRAMM DEPENDENCIES
yacuri_lang = { path = "../lang", default-features = false }
logos = { version = "0.12.0", default-features = false, features = ["export_derive"] }

# SCHEDULING
crossbeam-queue = { version = "0.3.2", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.2.0", default-features = false }
futures-util = { version = "0.3.4", default-features = false, features = ["alloc"] }

# CORE KERNEL DEPENDENCIES / X86 DEPENDENCIES
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
spin = "0.5.2"
volatile = "0.2.6"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
lazy_static = { version = "1.0", features = ["spin_no_std"]}
linked_list_allocator = "0.9.0"

[dependencies.fatfs]
git = "https://github.com/rafalh/rust-fatfs"
rev = "d0ed1b776bc24b3ef5e76b0335c90d2bd4d6d2b1"
features = ["unicode", "lfn", "alloc"]
default-features = false


[dev-dependencies]
# Used for generating random values for disk write tests
rand = {version = "0.8.4", default-features = false, features = ["small_rng"] }


[[test]]
name = "should_panic"
harness = false
[[test]]
name = "stack_overflow"
harness = false


[package.metadata.bootimage]
run-args = [
    "-drive", "format=raw,file=fs.bin",
    "-serial", "stdio",
]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-drive", "format=raw,file=src/drivers/disk/test_drive.bin",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
