[package]
name = "yacuri"
version = "0.1.0"
authors = ["Ellie Ang. <git@angm.xyz>"]
edition = "2018"


[dependencies]
# PROGRAMM
yacuri_lang = { path = "../lang", default-features = false }
logos = { version = "0.12.0", default-features = false, features = ["export_derive"] }

# SCHEDULING
crossbeam-queue = { version = "0.3.2", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.3.2", default-features = false }
futures-util = { version = "0.3.15", default-features = false, features = ["alloc"] }

# CORE KERNEL / X86
spin = "0.9.0"
volatile = "0.3.0"
x86_64 = "0.14.3"
uart_16550 = "0.2.15"
pic8259 = "0.10.1"
pc-keyboard = "0.5.1"
lazy_static = { version = "1.4", features = ["spin_no_std"]}
linked_list_allocator = "0.9.0"

# TODO: Change this back to upstream when PR #179 (or equivalent) hopefully gets merged
[dependencies.bootloader]
git = "https://github.com/anellie/bootloader"
rev = "bb13a86f4b180e354702c91ecb9bc7afbb724ede"

[dependencies.fatfs]
git = "https://github.com/rafalh/rust-fatfs"
rev = "d0ed1b776bc24b3ef5e76b0335c90d2bd4d6d2b1"
features = ["unicode", "lfn", "alloc"]
default-features = false


[dev-dependencies]
# Used for generating random values for disk write tests
rand = {version = "0.8.4", default-features = false, features = ["small_rng"] }


[[test]]
name = "should_panic"
harness = false
[[test]]
name = "stack_overflow"
harness = false


[package.metadata.bootloader]
map-physical-memory = true
desired-framebuffer-width = 1920
desired-framebuffer-height = 1080

[package.metadata.bootimage]
run-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-drive", "format=raw,file=fs.bin",
    "-serial", "stdio",
    "-M",  "q35"
]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-drive", "format=raw,file=src/drivers/disk/test_drive.bin",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
