[package]
name = "yacari"
version = "0.1.0"
authors = ["Ellie Ang. <git@angm.xyz>"]
edition = "2018"


[dependencies]
logos = { version = "0.12.0", default-features = false, features = ["export_derive"] }
enum-methods = "0.0.8"
rustc-hash = { version = "1.1.0", default-features = false }
smallvec = "1.6.1"
hashbrown = "0.11.2"
asm = { path = "asm/" }
memmap = "*"
libc = "0.2.97"
