[package]
name = "yacari"
version = "0.1.0"
authors = ["Ellie Ang. <git@angm.xyz>"]
edition = "2018"


[dependencies]
logos = { version = "0.12.0", default-features = false, features = ["export_derive"] }
enum-methods = "0.0.8"
rustc-hash = { version = "1.1.0", default-features = false }
smallvec = "1.6.1"
hashbrown = "0.11.2"
indexmap = { version = "1.7.0", default-features = false }

cranelift = { path = "cranelift/umbrella", default-features = false }
cranelift-jit = { path = "cranelift/jit", default-features = false }
cranelift-module = { path = "cranelift/module", default-features = false }

[features]
default = ["std"]
std = ["cranelift-jit/std"]
core = ["cranelift-jit/core"]
